[package]
name = "djikstra"
version = "0.1.0"
edition = "2021"
authors = ["Pranjal Rastogi <pranjal.rastogi@plaksha.edu.in>"]
description = """Implements Djikstra's algorithm for finding the shortest path in a graph in Rust."""
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.12.1"
