[package]
name = "djikstra"
version = "0.2.0"
edition = "2021"
authors = [
    "Pranjal Rastogi <pranjal.rastogi@plaksha.edu.in>",
    "Arbaaz Shafiq <arbaaz.shafiq@plaksha.edu.in>",
    "Nikhil Henry <nikhil.henry@plaksha.edu.in",
    "Subham Jalan <subham.jalan@plaksha.edu.in>",
]
description = """Implements Djikstra's algorithm for finding the shortest path in a graph in Rust."""

[profile.release]
debug = true

[dependencies]
clap = { version = "4.0", features = ["derive"] }
